--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -9,11 +9,11 @@ TERM = "alacritty"
 size=16
 
 [font.normal]
-family="EnvycodeRNerdFont"
+family="EnvyCodeRNerdFont"
 style="Regular"
 
 [window]
-opacity=0.8
+opacity=0.95
 
 [window.padding]
 x = 12
